// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructor with dict 1`] = `
StringPathFileSystem {
  "core": ArrayPathFileSystem {
    "coreMap": Map {
      "a" => Map {
        "0" => FakeFileContent {
          "content": "zero",
          "kind": "File",
        },
        "b" => Map {
          "1" => FakeFileContent {
            "content": "one",
            "kind": "File",
          },
          "c" => Map {},
        },
      },
      "abc" => Map {
        "def" => Map {
          "ghi" => FakeFileContent {
            "content": "abcdefghi",
            "kind": "File",
          },
        },
      },
      "foo" => Map {
        "bar" => FakeFileContent {
          "content": "foobar",
          "kind": "File",
        },
        "baz" => FakeFileContent {
          "content": "foobaz",
          "kind": "File",
        },
      },
    },
    "ensureDirSync": [Function],
    "ensureFileSync": [Function],
    "existsSync": [Function],
    "mkdirSync": [Function],
    "readFileSync": [Function],
    "readdirSync": [Function],
    "statSync": [Function],
    "writeFileSync": [Function],
  },
  "ensureDirSync": [Function],
  "ensureFileSync": [Function],
  "existsSync": [Function],
  "join": [Function],
  "mkdirSync": [Function],
  "normalize": [Function],
  "readFileSync": [Function],
  "readdirSync": [Function],
  "sep": "/",
  "split": [Function],
  "statSync": [Function],
  "writeFileSync": [Function],
}
`;

exports[`constructor without dict 1`] = `
StringPathFileSystem {
  "core": ArrayPathFileSystem {
    "coreMap": Map {},
    "ensureDirSync": [Function],
    "ensureFileSync": [Function],
    "existsSync": [Function],
    "mkdirSync": [Function],
    "readFileSync": [Function],
    "readdirSync": [Function],
    "statSync": [Function],
    "writeFileSync": [Function],
  },
  "ensureDirSync": [Function],
  "ensureFileSync": [Function],
  "existsSync": [Function],
  "join": [Function],
  "mkdirSync": [Function],
  "normalize": [Function],
  "readFileSync": [Function],
  "readdirSync": [Function],
  "sep": "/",
  "split": [Function],
  "statSync": [Function],
  "writeFileSync": [Function],
}
`;

exports[`ensureDirSync on child of a file: throws an error matches snapshot 1`] = `
ENOTDIR {
  "code": "ENOTDIR",
  "errno": -20,
  "path": Array [
    "abc",
    "def",
    "ghi",
    "new",
  ],
  "syscall": "mkdir",
}
`;

exports[`ensureDirSync on path that is occupied by a file: throws an error matches snapshot 1`] = `
ENOTDIR {
  "code": "ENOTDIR",
  "errno": -20,
  "path": Array [
    "abc",
    "def",
    "ghi",
  ],
  "syscall": "mkdir",
}
`;

exports[`ensureFileSync on child of a file: throws an error matches snapshot 1`] = `
ENOTDIR {
  "code": "ENOTDIR",
  "errno": -20,
  "path": Array [
    "abc",
    "def",
    "ghi",
    "new",
  ],
  "syscall": "open",
}
`;

exports[`ensureFileSync on path that is occupied by a directory: throws an error matches snapshot 1`] = `
EISDIR {
  "code": "EISDIR",
  "errno": -21,
  "path": Array [
    "abc",
    "def",
  ],
  "syscall": "open",
}
`;

exports[`mkdirSync on path that is occupied by a directory: throws an error matches snapshot 1`] = `
EEXIST {
  "code": "EEXIST",
  "errno": -17,
  "path": Array [
    "abc",
  ],
  "syscall": "mkdir",
}
`;

exports[`mkdirSync on path that is occupied by a file: throws an error matches snapshot 1`] = `
EEXIST {
  "code": "EEXIST",
  "errno": -17,
  "path": Array [
    "abc",
    "def",
    "ghi",
  ],
  "syscall": "mkdir",
}
`;

exports[`mkdirSync on thing that does not exist: throws an error matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing",
    "that",
    "does",
    "not",
    "exist",
  ],
  "syscall": "mkdir",
}
`;

exports[`readFileSync on directory: throws an error matches snapshot 1`] = `
EISDIR {
  "code": "EISDIR",
  "errno": -21,
  "path": Array [
    "abc",
    "def",
  ],
  "syscall": "read",
}
`;

exports[`readFileSync on thing that does not exist: throws an error "thing/that/does/not/exist" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing",
    "that",
    "does",
    "not",
    "exist",
  ],
  "syscall": "read",
}
`;

exports[`readFileSync on thing that does not exist: throws an error "thing-that-does-not-exist"" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing-that-does-not-exist",
  ],
  "syscall": "read",
}
`;

exports[`readdirSync on file: throws an error matches snapshot 1`] = `
ENOTDIR {
  "code": "ENOTDIR",
  "errno": -20,
  "path": Array [
    "abc",
    "def",
    "ghi",
  ],
  "syscall": "scandir",
}
`;

exports[`readdirSync on thing that does not exist: throws an error "thing/that/does/not/exist" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing",
    "that",
    "does",
    "not",
    "exist",
  ],
  "syscall": "scandir",
}
`;

exports[`readdirSync on thing that does not exist: throws an error "thing-that-does-not-exist" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing-that-does-not-exist",
  ],
  "syscall": "scandir",
}
`;

exports[`statSync on thing that does not exist: throws an error "thing/that/does/not/exist" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing",
    "that",
    "does",
    "not",
    "exist",
  ],
  "syscall": "stat",
}
`;

exports[`statSync on thing that does not exist: throws an error "thing-that-does-not-exist" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing-that-does-not-exist",
  ],
  "syscall": "stat",
}
`;

exports[`writeFileSync on path that is occupied by a directory: throws an error matches snapshot 1`] = `
EISDIR {
  "code": "EISDIR",
  "errno": -21,
  "path": Array [
    "abc",
    "def",
  ],
  "syscall": "open",
}
`;

exports[`writeFileSync on thing that does not exist: throws an error "thing/that/does/not/exist" matches snapshot 1`] = `
ENOENT {
  "code": "ENOENT",
  "errno": -2,
  "path": Array [
    "thing",
    "that",
    "does",
    "not",
    "exist",
  ],
  "syscall": "open",
}
`;
